--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@
 .header p {
 	color: grey;
 	font-size: 20px;
-	margin: 10px;
+	margin: 10px 0;
 	text-shadow: 0.8px -0.5px 0.5px #a9a9a9;	
+}
+
+.header ul {
+	padding: 0;
 }
 
 .header li {
@@ -15,9 +19,10 @@
 	background: #ddd;
 	padding: 1.5% 2%;
 	border-right: 1px solid #bfbfbf;
-	width: calc(100% / 6 - 5%);
+	width: calc(100% / 6);
 	color: grey;
 	text-align: center;
+	box-sizing: border-box;
 }
 
 .header li:first-child {
@@ -48,10 +53,11 @@
 
 .marketing button {
 	border-radius: 5px;
-	padding: 10px 20px;
+	padding: 20px 30px;
 	color: white;
-	background: green;
+	background: #04a904;
 	border: none;
+	font-size: larger;
 }
 
 .subheading {
@@ -72,10 +78,13 @@
 
 .sub {
 	display: inline-block;
-	width: 29%;
+	width: calc(33% - 1%);
 	vertical-align: top;
-	padding: 20px 0;
-	margin: 0 20px;
+	padding-right: 5px;
+}
+
+hr {
+	margin: 25px 0;
 }
 
 .footer {
